   * scripts/{normalize-by-median.py,sample-reads-randomly.py,
   trim-low-abund.py}: if stdin is supplied for input, check that -o
   specifies output file.
   * scripts/filter-abund.py: if stdin is supplied for input, check that -o
   specifies output file; switched -o to use argparse.FileType.
   * scripts/extract-long-sequences.py: switched -o to use argparse.FileType.
   * khmer/kfile.py: change 'check_input_files' to no longer warn that
   '-' doesn't exist'.
   * tests/test-data/paired.fq.2: removed extraneous newline from end.
   * tests/{test_normalize_by_median,test_script_arguments,test_scripts}.py:
   added tests for new code.

2015-07-21  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/{kfile,khmer_args}.py: refactored information passing, made it so
   space checks happen in the right directory.
   * oxli/build_graph.py,sandbox/collect-reads.py,scripts/{
   abundance-dist-single,filter-abund-single,load-into-counting,
   normalize-by-median,trim-low-abund}.py,tests/test_script_arguments.py:
   changed to use new arg structure for checking hashtable save space.
   * oxli/functions.py,scripts/saturate-by-median.py: updated error message
   to mention --force option.
   * scripts/{count-overlap,load-into-counting,make-initial-stoptags,
   partition-graph,sample-reads-randomly}.py: removed unnecessary call to
   check_space.

2015-07-20  Titus Brown  <titus@idyll.org>

   * khmer/__init__.py: cleaned up FP rate reporting.
   * scripts/normalize-by-median.py: corrected epilog; refactored reporting
   to be a bit cleaner; use CSV for reporting file;
   added --report-frequency arg.
   * tests/test_normalize_by_median.py: updated/added tests for reporting.

2015-07-17  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/{functions,build_graph}.py,scripts/{load-graph,normalize-by-median,
   abundance-dist}.py,tests/test_{normalize_by_median,subset_graph,hashbits,
   oxli_function}.py: pylint cleanup.

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>  
