@@ -87,7 +87,9 @@ def main():
     print('HT sizes:', hashsizes, file=sys.stderr)
     print('outputting to', args.output_histogram_filename, file=sys.stderr)
 
-    if os.path.exists(args.output_histogram_filename):
+    if args.output_histogram_filename in ('-', '/dev/stdin'):
+        pass
+    elif os.path.exists(args.output_histogram_filename):
         if not args.squash_output:
             print('ERROR: %s exists; not squashing.' %
                   args.output_histogram_filename,
@@ -109,7 +111,10 @@ def main():
               file=sys.stderr)
         sys.exit(1)
 
-    hash_fp = open(args.output_histogram_filename, 'w')
+    if args.output_histogram_filename in ('-', '/dev/stdin'):
+        hash_fp = sys.stdout
+    else:
+        hash_fp = open(args.output_histogram_filename, 'w')
     if args.csv:
         hash_fp_csv = csv.writer(hash_fp)
         # write headers:
