@@ -11,6 +11,7 @@
    * scripts/filter-abund.py: if stdin is supplied for input, check that -o
    specifies output file; switched -o to use argparse.FileType.
    * scripts/extract-long-sequences.py: switched -o to use argparse.FileType.
+   * scripts/abundance-dist.py: added '-' handling for output.
    * khmer/kfile.py: change 'check_input_files' to no longer warn that
    '-' doesn't exist'.
    * tests/test-data/paired.fq.2: removed extraneous newline from end.
